funciones basicas relaizadas, insercion, edicion, login, lista, buscar id  pendiente eliminar registro
